--- a/assets/css/sb-admin-2.css
+++ b/assets/css/sb-admin-2.css
@@ -2962,7 +2962,8 @@ input[type="button"].btn-block {
 }
 
 .collapse:not(.show) {
-  display: none;
+  display: flex!important;
+  flex-basis: auto;
 }
 
 .collapsing {
