--- a/assets/css/sb-admin-2.css
+++ b/assets/css/sb-admin-2.css
@@ -1497,7 +1497,7 @@ pre code {
 }
 
 .table thead th {
-  vertical-align: bottom;
+  vertical-align: middle;
   border-bottom: 2px solid #e3e6f0;
 }
 
