--- a/assets/css/css_message.css
+++ b/assets/css/css_message.css
@@ -1,6 +1,8 @@
 
 /* Chat containers */
 .container {
+	word-wrap: break-word;
+	width:auto;
 	text-align: left;
 	border: 2px solid #dedede;
 	background-color: #f1f1f1;
@@ -46,8 +48,8 @@
 
 /* width */
 ::-webkit-scrollbar {
-	width: 10px;
-	height: 10px;
+	width: 20px;
+	height: 20px;
 }
 
 /* Track */
